--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -74,6 +74,19 @@ jobs:
         with:
           ruby-version: .ruby-version
           bundler-cache: true
+          
+        # install yarn and deps
+      - name: Install Node.js and Yarn
+        uses: actions/setup-node@v4
+        with:
+          node-version: '20'
+          cache: 'yarn'
+          cache-dependency-path: yarn.lock
+
+      - name: Install Yarn
+        run: npm install --global yarn
+      - name: Install dependencies
+        run: yarn install --frozen-lockfile
 
       - name: Run tests
         env:
