--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "author": "Stephen Ierodiaconou <stevegeek@gmail.com>",
   "license": "MIT",
   "dependencies": {
-    "daisyui": "^5.0.43"
+    "daisyui": "^5.0.43",
+    "highlight.js": "^11.11.1"
   }
 }
