Update CI config

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -81,7 +81,7 @@ jobs:
         with:
           node-version: '20'
           cache: 'yarn'
-          cache-dependency-path: yarn.lock
+          cache-dependency-path: package.json
 
       - name: Install Yarn
         run: npm install --global yarn
